--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/oussema-portfolio/assets/index.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
