--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         
         <div class="resumebtn">
-          <a href="assets/cv.pdf" download class="btn">
+          <assets href="assets/cv.pdf" download class="btn">
               <span>Resume</span>
               <i class="fas fa-chevron-right"></i>
           </a>
