--- a/index.html
+++ b/index.html
@@ -58,22 +58,36 @@
         </ul>
       </div>
     </div>
-<div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/oussema.jpg" alt="">
-</div>
 </section>
 <!-- hero section ends -->
+<style>
+  .image img {
+@media (max-width: 768px) {
+  .image img {
+    width: 40px;
+  }
+}
 
+@media (max-width: 480px) {
+  .image img {
+    width: 40px;
+  }
+}
+}
+
+</style>
 
 <!-- about section starts -->
 <section class="about" id="about">
     <h2 class="heading"><i class="fas fa-user-alt"></i> About <span>Me</span></h2>
     
     <div class="row">
-
+<div class="image">
+    <img draggable="false" class="tilt" src="./assets/images/oussema.jpg" alt="" style="width: 250px; height: 250px; border-radius: 50%;">
+</div>
     <div class="content">
         <h3>I'm Mohamed Oussema</h3>
-        <span class="tag">Full Stack Developer</span>
+        <span class="tag">Full-Stack Developer</span>
         
         <p>I am a Full-Stack developer based in Tunisia. 
           currently in the second year of Software Engineering at ESPRIT university, specializing in Web and Internet technologies - TWIN . <br>
@@ -449,7 +463,7 @@
 
 
 <!-- scroll top btn -->
-<a href="#home" aria-label="ScrollTop" class="fas fa-angle-up" id="scroll-top"></a>
+<a href="#home" aria-label="ScrollTop" class="fas fa-angle-up" id="scroll-top" style="margin-top: 40px;"></a>
 <!-- scroll back to top -->
 
 
