--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="container">
         <div class="row" id="skillsContainer">
           <!-- Start of icons -->
-          <div class="bar">
+          <!-- <div class="bar">
             <div class="info">
               <img
                 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"
@@ -282,7 +282,7 @@
                 height="40"
               /><span>CSS3</span>
             </div>
-          </div>
+          </div> -->
           <div class="bar">
             <div class="info">
               <img
@@ -298,7 +298,7 @@
                 src="https://cdn.simpleicons.org/tailwindcss/06B6D4"
                 width="40"
                 height="40"
-              /><span>Tailwind</span>
+              /><span>Tailwind css</span>
             </div>
           </div>
           <div class="bar">
@@ -334,7 +334,7 @@
                 src="https://skillicons.dev/icons?i=express"
                 width="40"
                 height="40"
-              /><span>Express</span>
+              /><span>Express.js</span>
             </div>
           </div>
           <div class="bar">
@@ -352,7 +352,7 @@
                 src="https://cdn.simpleicons.org/dotnet/512BD4"
                 width="40"
                 height="40"
-              /><span>.NET</span>
+              /><span>DotNET</span>
             </div>
           </div>
           <div class="bar">
@@ -409,7 +409,7 @@
               /><span>Firebase</span>
             </div>
           </div>
-          <div class="bar">
+          <!-- <div class="bar">
             <div class="info">
               <img
                 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vagrant/vagrant-original.svg"
@@ -417,7 +417,7 @@
                 height="40"
               /><span>Vagrant</span>
             </div>
-          </div>
+          </div> -->
           <div class="bar">
             <div class="info">
               <img
