--- a/index.html
+++ b/index.html
@@ -599,6 +599,34 @@
         <div class="box tilt">
           <img
             draggable="false"
+            src="./assets/images/projects/gamefy.png"
+            alt=""
+          />
+          <div class="content">
+            <div class="tag">
+              <h3>Gamefy</h3>
+            </div>
+            <div class="desc">
+              <p>
+              Implementation of an admin dashboard for Gamefy Academy Plateform.
+              </p>
+              <div class="btns">
+                <a href="#" class="btn" target="_blank"
+                  ><i class="fas fa-eye"></i> View</a
+                >
+                <a
+                  href=""
+                  class="btn"
+                  target="_blank"
+                  >Code <i class="fas fa-code"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="box tilt">
+          <img
+            draggable="false"
             src="./assets/images/projects/mern.jpg"
             alt=""
           />
@@ -799,6 +827,17 @@
       <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
 
       <div class="timeline">
+        <div class="container left">
+          <div class="content">
+            <div class="tag">
+              <h2>Axio</h2>
+            </div>
+            <div class="desc">
+              <h3>Ful-Stack & DevOps Developer | Internship</h3>
+              <p>June 2025 - August 2025</p>
+            </div>
+          </div>
+        </div>
         <div class="container right">
           <div class="content">
             <div class="tag">
