new skills , ready for PFE btw 👍

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
           <span class="tag">Full-Stack Developer</span>
 
           <p>
-            I am a Full-Stack developer based in Tunisia. currently in the
-            second year of Software Engineering at ESPRIT university,
-            specializing in Web and Internet technologies - TWIN . <br />
+            I am a Full-Stack developer based in Tunisia. currently in the final
+            year of Software Engineering at ESPRIT university, specializing in
+            Web and Internet technologies - TWIN . <br />
             👨🏻‍💻 I am actively seeking opportunities to acquire new skills, learn,
             and ultimately achieve success in my ongoing journey of personal and
             professional development.
@@ -152,11 +152,7 @@
           </div>
 
           <div class="resumebtn">
-            <a
-              href="assets/CV_ANG_MOHAMED OUSSEMA_BOUSSIDA.pdf"
-              download
-              class="btn"
-            >
+            <a href="assets/CV_BoussidaMedOussema.pdf" download class="btn">
               <span>Resume</span>
               <i class="fas fa-chevron-right"></i>
             </a>
@@ -364,6 +360,43 @@
               /><span>Symfony</span>
             </div>
           </div>
+          <div class="bar">
+            <div class="info">
+              <img
+                src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/laravel.svg"
+                width="40"
+                height="40"
+                style="
+                  filter: invert(30%) sepia(90%) saturate(5000%)
+                    hue-rotate(340deg) brightness(95%) contrast(100%);
+                "
+              />
+              <span>Laravel</span>
+            </div>
+          </div>
+
+          <div class="bar">
+            <div class="info">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg"
+                width="40"
+                height="40"
+              />
+              <span>Django</span>
+            </div>
+          </div>
+
+          <div class="bar">
+            <div class="info">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg"
+                width="40"
+                height="40"
+              />
+              <span>SQLite</span>
+            </div>
+          </div>
+
           <div class="bar">
             <div class="info">
               <img
@@ -608,16 +641,14 @@
             </div>
             <div class="desc">
               <p>
-              Implementation of an admin dashboard for Gamefy Academy Plateform.
+                Implementation of an admin dashboard for Gamefy Academy
+                Plateform.
               </p>
               <div class="btns">
                 <a href="#" class="btn" target="_blank"
                   ><i class="fas fa-eye"></i> View</a
                 >
-                <a
-                  href=""
-                  class="btn"
-                  target="_blank"
+                <a href="" class="btn" target="_blank"
                   >Code <i class="fas fa-code"></i
                 ></a>
               </div>
