--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- navbar starts -->
     <header>
-      <a href="/" class="logo"><i class="fab fa-react"></i> Oussema</a>
+      <a href="/" class="logo"><i class="fab fa-react"></i>Oussema</a>
 
       <div id="menu" class="fas fa-bars"></div>
       <nav class="navbar">
@@ -133,8 +133,8 @@
 
           <p>
             I am a Full-Stack developer based in Tunisia. currently in the final
-            year of Software Engineering at ESPRIT university, specializing in
-            Web and Internet technologies - TWIN . <br />
+            year of Software Engineering at ESPRIT School of Engineering, specializing in
+            Web and Internet technologies. <br />
             👨🏻‍💻 I am actively seeking opportunities to acquire new skills, learn,
             and ultimately achieve success in my ongoing journey of personal and
             professional development.
@@ -629,6 +629,31 @@
       </h2>
 
       <div class="box-container">
+                <div class="box tilt">
+          <img
+            draggable="false"
+            src="./assets/images/projects/laravel.png"
+            alt=""
+          />
+          <div class="content">
+            <div class="tag">
+              <h3>UrbanGreen</h3>
+            </div>
+            <div class="desc">
+              <p>
+              A project that promotes the greening of urban areas to improve the quality of life in cities.
+              </p>
+              <div class="btns">
+                <a href="#" class="btn" target="_blank"
+                  ><i class="fas fa-eye"></i> View</a
+                >
+                <a href="https://github.com/medoussemaboussida/Laravel_TheStarks_5TWIN7.git" class="btn" target="_blank"
+                  >Code <i class="fas fa-code"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="box tilt">
           <img
             draggable="false"
@@ -855,7 +880,7 @@
 
     <!-- experience section starts -->
     <section class="experience" id="experience">
-      <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
+      <h2 class="heading"><i class="fas fa-briefcase"></i>Internships</h2>
 
       <div class="timeline">
         <div class="container left">
@@ -864,7 +889,7 @@
               <h2>Axio</h2>
             </div>
             <div class="desc">
-              <h3>Ful-Stack & DevOps Developer | Internship</h3>
+              <h3>Ful-Stack Web Developer | Internship</h3>
               <p>June 2025 - August 2025</p>
             </div>
           </div>
