--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="content">
           <h3>I'm Mohamed Oussema</h3>
-          <span class="tag">Full-Stack Developer</span>
+          <span class="tag">Software Engineering student & Full-Stack Developer</span>
 
           <p>
             I am a Full-Stack developer based in Tunisia. currently in the final
@@ -147,7 +147,7 @@
             </div> -->
             <div class="box">
               <p><span> email : </span> medoussemaboussida@gmail.com</p>
-              <p><span> place : </span>Tunisia</p>
+              <p><span> place : </span>Tunis, Ariana</p>
             </div>
           </div>
 
@@ -644,9 +644,6 @@
               A project that promotes the greening of urban areas to improve the quality of life in cities.
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a href="https://github.com/medoussemaboussida/Laravel_TheStarks_5TWIN7.git" class="btn" target="_blank"
                   >Code <i class="fas fa-code"></i
                 ></a>
@@ -667,15 +664,12 @@
             <div class="desc">
               <p>
                 Implementation of an admin dashboard for Gamefy Academy
-                Plateform.
+                Plateform (Internship Project)
               </p>
               <div class="btns">
                 <a href="#" class="btn" target="_blank"
                   ><i class="fas fa-eye"></i> View</a
                 >
-                <a href="" class="btn" target="_blank"
-                  >Code <i class="fas fa-code"></i
-                ></a>
               </div>
             </div>
           </div>
@@ -697,7 +691,7 @@
                 support for students facing difficulties.
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
+                <a href="https://www.linkedin.com/feed/update/urn:li:activity:7328139506606391299/" class="btn" target="_blank"
                   ><i class="fas fa-eye"></i> View</a
                 >
                 <a
@@ -726,9 +720,6 @@
                 SpringBoot project.
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a
                   href="https://github.com/jigar-sable/Portfolio-Website"
                   class="btn"
@@ -755,9 +746,6 @@
                 managing a grocery store .
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a
                   href="https://github.com/medoussemaboussida/ESPRIMARKET"
                   class="btn"
@@ -784,9 +772,6 @@
                 IT news and events in Tunisia .
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a
                   href="https://github.com/medoussemaboussida/ITounsi"
                   class="btn"
@@ -809,9 +794,6 @@
                 business travel agency.
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a
                   href="https://github.com/medoussemaboussida/Royal-Travelers"
                   class="btn"
@@ -835,9 +817,6 @@
             <div class="desc">
               <p>Conception and development of a medical website.</p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a
                   href="https://github.com/medoussemaboussida/Jasmineous"
                   class="btn"
@@ -861,9 +840,6 @@
             <div class="desc">
               <p>Development of a 2d video game.</p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
-                  ><i class="fas fa-eye"></i> View</a
-                >
                 <a
                   href="https://github.com/medoussemaboussida/Leaders-Apocalypse"
                   class="btn"
@@ -889,7 +865,7 @@
               <h2>Axio</h2>
             </div>
             <div class="desc">
-              <h3>Ful-Stack Web Developer | Internship</h3>
+              <h3>Full-Stack Web Developer | Internship</h3>
               <p>June 2025 - August 2025</p>
             </div>
           </div>
