--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#work">Work</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#experience">Internships</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
         </ul>
       </nav>
@@ -979,7 +979,7 @@
           >
           <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
           <a href="#experience"
-            ><i class="fas fa-chevron-circle-right"></i> experience</a
+            ><i class="fas fa-chevron-circle-right"></i> Internships</a
           >
         </div>
 
