--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 Plateform (Internship Project)
               </p>
               <div class="btns">
-                <a href="#" class="btn" target="_blank"
+                <a href="https://drive.google.com/file/d/1tSqIW3GF-rC9OD6Q95QUZ9NnbrsgsGTw/view?usp=sharing" class="btn" target="_blank"
                   ><i class="fas fa-eye"></i> View</a
                 >
               </div>
