--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <img
             draggable="false"
             class="tilt"
-            src="./assets/images/oussema.jpg"
+            src="./assets/images/boussida.png"
             alt=""
             style="width: 250px; height: 250px; border-radius: 50%"
           />
